--- a/static/style.css
+++ b/static/style.css
@@ -1,41 +1,76 @@
-.carousel-item img {
-  width: 100%;        
-  max-width: 800px;   
-  height: auto;        
-  object-fit: cover;   
-}
-.custom-caption {
-  position: absolute;
-  top: 50%;
-  right: 5%;   /* left বা right set করতে পারেন */
-  transform: translateY(-50%);
-  color: #14101c;       /* text color */
-  background: rgba(199, 179, 211, 0.4); /* optional background */
-  padding: 10px 20px;
-  border-radius: 8px;
-  text-align: left;
-  max-width: 40%;     /* text area width */
+.custom-navbar {
+    background-color: #dbcce0; 
 }
 
+.custom-navbar .nav-link,
+.custom-navbar .navbar-brand {
+    color: #281c2a;
+}
+
+.custom-navbar .nav-link:hover {
+    color: #d29fe6;
+}
+
+.carousel-item img {
+    height: 300px;
+    width: 300%;
+    object-fit: cover;
+    object-position: center;
+}
+
+
+
+.carousel-caption h5,
+.carousel-caption p {
+    color: #edeaed;            
+}
+
+
+.carousel-caption {
+    background: rgba(8, 0, 9, 0.5); 
+    padding: 3px;
+    border-radius: 3px;
+}
+
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    filter: invert(1);          
+}
+
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    width: 3rem;
+    height: 3rem;
+}
+
+
+.carousel-indicators [data-bs-target] {
+    background-color: #141313;
+}
+
+
+
 .about-section {
-  background-color: #ece6ee;  /* light gray background, change as needed */
-  height: 90vh;               /* page height, adjust as needed */
-  padding: 50px 20px;         /* top-bottom padding */
+  background-color: #ece6ee;  
+  min-height: 70vh;               
+  padding: 50px 20px;         
 }
 
 .about-section h1 {
   margin-bottom: 5px;
-  font-size: 3rem;            /* headline size */
+  font-size: 3rem;            
 }
 
 .about-section p {
-  max-width: 700px;           /* text width limit */
+  max-width: 700px;           
   font-size: 1.2rem;
   line-height: 1.6;
 }
 .contact-section {
   min-height: 72vh;
-  background-color: #ece6ee; /* subtle background */
+  background-color: #ece6ee; 
   padding: 50px 20px;
 }
 
@@ -79,3 +114,4 @@
   transform: translateY(-3px);
   box-shadow: 0 6px 10px rgba(0,0,0,0.15);
 }
+
