--- a/crafteholic/templates/base.html
+++ b/crafteholic/templates/base.html
@@ -13,8 +13,9 @@
   <body>
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg custom-navbar">
+
+  <div class="container ">
     <a class="navbar-brand" href="#">Crafteholic</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -49,9 +50,10 @@
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
         <button class="btn btn-outline-success" type="submit">Search</button>
+        
+      </form>
         <button class="btn btn-outline-success me-2" type="button">Log in</button>
         <button class="btn btn-sm btn-outline-secondary" type="button">Cart</button>
-      </form>
     </div>
   </div>
 </nav>
