--- a/crafteholic/templates/Home/index.html
+++ b/crafteholic/templates/Home/index.html
@@ -17,22 +17,21 @@
     <div class="carousel-item active">
       <img src="{% static 'Logo.jpeg' %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h1>Welcome to Crafteholic</h1>
+        <p>Crafting dreams in to reality at crafteholic</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="{% static 'Explosion box.jpeg' %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Second slide label</h5>
-        <p>Some representative placeholder content for the second slide.</p>
+        <h3>Your design our work</h3>
+        <p>Join us on a journey of creativity and handmade wonders.</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="{% static 'Letter keychain.jpeg' %}" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        
       </div>
     </div>
   </div>
@@ -44,6 +43,8 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+  </div>
+
 </div>
 
 <h3 class="text-center mb-4">Featured Products</h3>
@@ -67,14 +68,7 @@
     {% endfor %}
   </div>
 </div>
-  <div class="container my-4">
-    <h4 class="mb-3">Search & Filter Products</h4>
-    <form method="GET" action="{% url 'search_products' %}">
-    <input type="text" name="q" placeholder="Search...">
-  
-    <button type="submit">Filter</button>
-</form>
-</div>
+
 
 
 </div>
