--- a/crafteholic/templates/Home/product.html
+++ b/crafteholic/templates/Home/product.html
@@ -1,37 +1,22 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Product{% endblock title %}
+{% block title %}Products{% endblock title %}
 
 {% block body %}
-
-{% if search %}
-  <h4 class="text-center my-4">
-    Search results for "{{ search }}"
-  </h4>
-{% elif category %}
-  <h4 class="text-center my-4 text-capitalize">
-    {{ category }} Products
-  </h4>
-{% else %}
-  <h4 class="text-center my-4">All Products</h4>
-{% endif %}
-
-<div class="container">
+<div class="container my-4">
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-
     {% for product in products %}
     <div class="col">
       <div class="card shadow-sm h-100">
-
         {% if product.image %}
-          <img src="{{ product.image.url }}"
-               class="card-img-top"
-               style="height:225px; object-fit:cover;">
+          <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}"
+               style="height:225px; object-fit:cover; cursor:pointer;"
+               data-bs-toggle="modal" data-bs-target="#productModal{{ product.id }}">
         {% else %}
-          <img src="{% static 'images/no-image.png' %}"
-               class="card-img-top"
-               style="height:225px; object-fit:cover;">
+          <img src="{% static 'images/no-image.png' %}" class="card-img-top" alt="{{ product.name }}"
+               style="height:225px; object-fit:cover; cursor:pointer;"
+               data-bs-toggle="modal" data-bs-target="#productModal{{ product.id }}">
         {% endif %}
 
         <div class="card-body">
@@ -39,14 +24,30 @@
           <p>{{ product.short_description }}</p>
           <small>৳{{ product.price }}</small>
         </div>
-
       </div>
     </div>
-    {% empty %}
-      <p class="text-center">No products found.</p>
-    {% endfor %}
 
+    <!-- Product Modal -->
+    <div class="modal fade" id="productModal{{ product.id }}" tabindex="-1" aria-labelledby="productModalLabel{{ product.id }}" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="productModalLabel{{ product.id }}">{{ product.name }}</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body text-center">
+            {% if product.image %}
+              <img src="{{ product.image.url }}" alt="{{ product.name }}" class="img-fluid">
+            {% else %}
+              <img src="{% static 'images/no-image.png' %}" alt="{{ product.name }}" class="img-fluid">
+            {% endif %}
+            <p class="mt-3">{{ product.description }}</p>
+            <p><strong>Price:</strong> ৳{{ product.price }}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
   </div>
 </div>
-
 {% endblock body %}
