--- a/crafteholic/templates/contact.html
+++ b/crafteholic/templates/contact.html
@@ -18,7 +18,7 @@
     <a href="https://www.facebook.com/share/1FrcTFPxxX/?mibextid=wwXIfr" target="_blank" class="btn btn-facebook mb-3">
       Facebook
     </a>
-    <a href="https://www.instagram.com/YourPage" target="_blank" class="btn btn-instagram">
+    <a href="https://www.instagram.com/craft_eholic?igsh=MWtvOThzZnZ0NWxqdA%3D%3D" target="_blank" class="btn btn-instagram">
       Instagram
     </a>
   </div>
